# serial_port

./: .gitignore  CMakeLists.txt  Diagram.md  README.md  vcpkg.json
cmake/: serial_port_config.cmake.in  serial_port_install.cmake
docs/: diagrams.drawio  doxygen.cfg  serial_port.css
docs/PlantUML/: class_diagram.plantuml  looper_state.plantuml
examples/: CMakeLists.txt  eg1_print_ports.cpp  eg1_print_ports.h  eg2_read.cpp  eg2_read.h  example.cpp
include/serial_port/: serial_port.h  serial_port_info.h  serial_port_looper.h
src/: serial_port.cpp  serial_port_info.cpp  serial_port_looper.cpp
